# Agentless

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  README_swebench.md  README_swebenchlite.md  ensembled_annotations_public.csv  eval_retrieval.py  git_preprocess_data.py  ingest_vector_db.py  pyproject.toml  ranked_repo_map.py  requirements.txt  stratified_sampling.py
agentless/: run_instance.py  ticket_generator.py
agentless/fl/: FL.py  Index.py  combine.py  localize.py  retrieve.py
agentless/get_repo_structure/: get_patch_info.py  get_repo_structure.py
agentless/localisation/: FL.py  localize.py  validation.py
agentless/repair/: repair.py  repair_code.py  repair_coverage.py  repaire_tools.py  rerank.py
agentless/retreival/: VectorDB.py  config.py  gitrepo.py  rerank_files.py  upload_swe_bench_to_qdrant.py
agentless/test/: generate_reproduction_tests.py  instances_to_eval.py  run_regression_tests.py  run_reproduction_tests.py  run_tests.py  select_regression_tests.py  tests_to_run.md
agentless/util/: api_requests.py  compress_file.py  index_skeleton.py  model.py  parse_global_var.py  postprocess_data.py  preprocess_data.py  regression_tests.py  utils.py
classification/: README.md  graph_classification.py  load_filtered_benchmark.py  requirements_graph.txt  swebench_lite_classifications.csv
dev/util/: cost.py
get_repo_structure/: get_repo_structure.py
results_gemini_refine/location/: args.json
results_loc_anthropic/location/: args.json  loc_outputs.jsonl
results_syntax_check/repair/: args.json  output_0_normalized.jsonl  (+20 more)
(+12 files in other folders)
