[tool.poetry]
name = "agentless"
version = "0.1.0"
description = ""
authors = ["Saurav Panda <sgp65@cornell.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.8.0"
datasets = "^2.21.0"
tiktoken = "^0.7.0"
swebench = "^2.0.12"
libcst = "^1.4.0"
kaizen-cloudcode = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
